@@ -19,7 +19,7 @@ package org.apache.solr.cloud;
 
 import java.io.IOException;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -106,8 +106,7 @@ public class NodeRolesTest extends SolrCloudTestCase {
       String path = nodenamePaths[i + 1];
       assertTrue(
           "Didn't find " + nodename + " at " + path + ". Full response: " + rsp.jsonStr(),
-          ((Collection) Objects.requireNonNullElse(rsp._get(path), Collections.emptyList()))
-              .contains(nodename));
+          ((Collection) Objects.requireNonNullElse(rsp._get(path), List.of())).contains(nodename));
     }
   }
 
@@ -120,8 +119,7 @@ public class NodeRolesTest extends SolrCloudTestCase {
             .process(cluster.getSolrClient());
 
     Map<String, Object> l =
-        (Map<String, Object>)
-            Objects.requireNonNullElse(rsp._get("supported-roles"), Collections.emptyMap());
+        (Map<String, Object>) Objects.requireNonNullElse(rsp._get("supported-roles"), Map.of());
 
     assertTrue(l.containsKey("data"));
     assertTrue(l.containsKey("overseer"));
