@@ -20,7 +20,6 @@ import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.lessThan;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
@@ -888,6 +887,6 @@ public class PhrasesIdentificationComponentTest extends SolrTestCaseJ4 {
    * unexpected stream elements
    */
   public <T> void assertEmptyStream(final String msg, final Stream<? extends T> stream) {
-    assertEquals(msg, Collections.emptyList(), stream.collect(Collectors.toList()));
+    assertEquals(msg, List.of(), stream.collect(Collectors.toList()));
   }
 }
